# generic-python-template

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-release.yml  release-please.yml
requirements/: dev.txt
src/my_project/: __main__.py  script.py
tests/unit_tests/: test_dummy.py
