[project]
name = "project-name"
version = "0.1.0"
description = "<PROJECT DESCRIPTION>"
authors = [{ name = "Torbjørn Gulbrandsen", email = "torbjorngul@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# put unpinned dependencies here, install with uv pip install -e . , optional deps uv pip install '-e .[dev/test]'
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# OPTIONAL FOR TEST IMPORTS
# pythonpath = ["./src"]
filterwarnings = [
    "ignore:.*urllib3.contrib.pyopenssl.*:DeprecationWarning",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py311"
line-length = 119
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # redundant file open mode
    "UP015",
]
fixable = ["ALL"]
unfixable = [
    # Don't touch unused imports
    "F401",
]

# OPTIONAL FOR LINTING FIRST PARTY IMPORTS
# [tool.ruff.lint.isort]
# known-first-party = [""]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
